--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Mrs-Siddons_66222
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: archival
+  image_path: 66222-h/images/cover.jpg
 creator:
   author:
     agent_name: Kennard, Nina A.
@@ -15,6 +18,8 @@ creator:
     gutenberg_agent_id: '37852'
     url: http://www.gutenberg.org/2009/agents/37852
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/66222#Mrs-Siddons
 gutenberg_issued: '2021-09-05'
 identifiers:
   gutenberg: '66222'
